--- a/Sonar_ML.ipynb
+++ b/Sonar_ML.ipynb
@@ -8,7 +8,7 @@
         "A4OfyQU4Av0d"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO6gWromgXle10IGqJ5lVzx",
+      "authorship_tag": "ABX9TyP3y2EvlL1x2a8TW0+/7H9T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1656,11 +1656,49 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Taking input data\n",
+        "input_data = (0.0231,0.0351,0.0030,0.0304,0.0339,0.0860,0.1738,0.1351,0.1063,0.0347,0.0575,0.1382,0.2274,0.4038,0.5223,0.6847,0.7521,0.7760,0.7708,0.8627,1.0000,0.8873,0.8057,0.8760,0.9066,0.9430,0.8846,0.6500,0.2970,0.2423,0.2992,0.2285,0.2277,0.1529,0.1037,0.0352,0.1073,0.1373,0.1331,0.1454,0.1115,0.0440,0.0762,0.1381,0.0831,0.0654,0.0844,0.0595,0.0497,0.0313,0.0154,0.0106,0.0097,0.0022,0.0052,0.0072,0.0056,0.0038,0.0043,0.0030)\n",
+        "\n",
+        "#Changing input data to numpy array\n",
+        "input_data_as_np_array = np.asarray(input_data)\n",
+        "\n",
+        "#Reshape the array\n",
+        "input_data_reshaped = input_data_as_np_array.reshape(1,-1)\n",
+        "\n",
+        "#Prediction\n",
+        "prediction = model.predict(input_data_reshaped)\n",
+        "\n",
+        "if prediction[0] == 'M':\n",
+        "  print('This object is: Mine')\n",
+        "else:\n",
+        "  print('This object is: Rock')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3N_vGnEIFX6-",
+        "outputId": "cd720bd7-2877-4b98-b136-3ac135d51672"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This object is: Rock\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3N_vGnEIFX6-"
+        "id": "hNifeRYBGDlA"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     }
   ]
