--- a/Sonar_ML.ipynb
+++ b/Sonar_ML.ipynb
@@ -7,8 +7,7 @@
       "collapsed_sections": [
         "A4OfyQU4Av0d"
       ],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP3y2EvlL1x2a8TW0+/7H9T",
+      "authorship_tag": "ABX9TyMcnH4kD/H+9l6/1522i7Pt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +41,30 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3v_v_bFI8jJa",
+        "outputId": "d6acd5e8-f66c-4dd7-ca94-86fee3d89626"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -51,7 +74,7 @@
       "metadata": {
         "id": "EckhRUj_8aMm"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -68,12 +91,12 @@
       "source": [
         "#Loading data to Panda's dataframe\n",
         "  #There is no header in csv file -> header=None\n",
-        "sonar_df = pd.read_csv('/content/Sonar_data.csv', header=None)"
+        "sonar_df = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Project 1 - Sonar/Sonar_data.csv', header=None)"
       ],
       "metadata": {
         "id": "v8ST85Iu8o61"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -87,9 +110,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dfVZrnct9Stl",
-        "outputId": "0de19aa5-9b89-49ac-8180-8aa51aaa2aa7"
+        "outputId": "136f2528-47fc-4ca3-dbc2-45b394e404f4"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +122,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 8
         }
       ]
     },
@@ -114,9 +137,9 @@
           "height": 350
         },
         "id": "dJM7WGq897OL",
-        "outputId": "c3eca39a-1a51-4977-8f82-eac0a01c70eb"
+        "outputId": "ffd0ca74-5872-413a-f5eb-e2e75f946d6a"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +189,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f040c91b-6761-468f-928f-ef4b77d354a9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-96c180b9-f7ba-49bb-bc29-0e3c2b05d813\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -408,7 +431,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f040c91b-6761-468f-928f-ef4b77d354a9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96c180b9-f7ba-49bb-bc29-0e3c2b05d813')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -460,12 +483,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f040c91b-6761-468f-928f-ef4b77d354a9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-96c180b9-f7ba-49bb-bc29-0e3c2b05d813 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f040c91b-6761-468f-928f-ef4b77d354a9');\n",
+              "        const element = document.querySelector('#df-96c180b9-f7ba-49bb-bc29-0e3c2b05d813');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -485,8 +508,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e2fdea9b-27e8-4905-bbdb-5f0a7382c672\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e2fdea9b-27e8-4905-bbdb-5f0a7382c672')\"\n",
+              "<div id=\"df-d7b55121-86e4-44a5-8d40-812455ba8cef\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d7b55121-86e4-44a5-8d40-812455ba8cef')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -605,7 +628,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e2fdea9b-27e8-4905-bbdb-5f0a7382c672 button');\n",
+              "        document.querySelector('#df-d7b55121-86e4-44a5-8d40-812455ba8cef button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -620,7 +643,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
@@ -638,9 +661,9 @@
           "height": 178
         },
         "id": "RHJD_VMUAVnW",
-        "outputId": "e5a38cd4-dc85-49ea-c4e4-4c0d1951d76a"
+        "outputId": "dc920e9c-964b-46c3-e45a-13e421a86494"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +715,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -708,9 +731,9 @@
           "height": 193
         },
         "id": "wXGUWxsg-HZe",
-        "outputId": "4acc8e73-5021-49a7-b3b6-06b3cab33921"
+        "outputId": "12d43e18-740b-4862-acce-b11d950411eb"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -735,7 +758,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fdf5bbfb-bf34-4efe-9b36-140ae7295d83\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1188e58e-c957-4b4c-84de-7fe06f9b3d52\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -857,7 +880,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fdf5bbfb-bf34-4efe-9b36-140ae7295d83')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1188e58e-c957-4b4c-84de-7fe06f9b3d52')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -909,12 +932,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fdf5bbfb-bf34-4efe-9b36-140ae7295d83 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1188e58e-c957-4b4c-84de-7fe06f9b3d52 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fdf5bbfb-bf34-4efe-9b36-140ae7295d83');\n",
+              "        const element = document.querySelector('#df-1188e58e-c957-4b4c-84de-7fe06f9b3d52');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -934,8 +957,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-71faa983-1510-4316-98c8-d596a157f7f0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-71faa983-1510-4316-98c8-d596a157f7f0')\"\n",
+              "<div id=\"df-a3f41454-6577-434a-9803-9746bd4e26b2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a3f41454-6577-434a-9803-9746bd4e26b2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1054,7 +1077,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-71faa983-1510-4316-98c8-d596a157f7f0 button');\n",
+              "        document.querySelector('#df-a3f41454-6577-434a-9803-9746bd4e26b2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1069,7 +1092,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -1094,7 +1117,7 @@
       "metadata": {
         "id": "852nMiPFBUox"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1114,7 +1137,7 @@
       "metadata": {
         "id": "4Lt6yhlLBeAH"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1135,7 +1158,7 @@
       "metadata": {
         "id": "NGnoFaJUDEPz"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1150,9 +1173,9 @@
           "height": 80
         },
         "id": "NDX8gVkZDQuS",
-        "outputId": "614b3359-05ed-4cb7-9796-0aedbbc474a7"
+        "outputId": "553714c5-c070-4e80-d9f1-3256f5bb16d3"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1580,7 +1603,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 15
         }
       ]
     },
@@ -1606,9 +1629,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ENd_ZTN_D1t9",
-        "outputId": "9d1b0b62-86a6-4314-c1f4-db22457e07d0"
+        "outputId": "ff42e420-494e-4b43-f287-5e72f0e63599"
       },
-      "execution_count": 30,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1632,9 +1655,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RiHTgo9HD8Lw",
-        "outputId": "261259e1-71f4-4209-a822-e192393d335f"
+        "outputId": "52884b5c-acb9-47f3-fdda-171b02ae63b5"
       },
-      "execution_count": 31,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1679,9 +1702,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3N_vGnEIFX6-",
-        "outputId": "cd720bd7-2877-4b98-b136-3ac135d51672"
+        "outputId": "be58fe0a-c62a-44e4-fe55-bd19e9aaa168"
       },
-      "execution_count": 39,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1696,9 +1719,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hNifeRYBGDlA"
+        "id": "2T3EYURx9YVZ"
       },
-      "execution_count": 33,
+      "execution_count": 18,
       "outputs": []
     }
   ]
